--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -1,121 +1,5 @@
 [[client-cfg-autoinstallation]]
-
-
-
-= Introduction:
-
-Remove the last two paragraphs. They are just missleading and no main features.
-==> Keeping cobbler nevertheless here?
-
-
-== Basic Concepts:
-
-| Installation should happen via Network Boot (PXE Boot).
-| For this you need a DHCP server which point to yout SUSE Manager Server as tftp server.
-
-| The tftp environment is generated with a tool called cobbler.
-| 
-| Cobbler can also generate a bootable ISO which can be used to install machines where PXE boot is not an option (https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/client-configuration/cobbler.html#_build_isos_with_cobbler)
-
-=== A Distribution:
-
-At System => Autoinstallation => Distribution you can set distributions used for autoinstallation.
-
-First you need to provide the files required to start an installation.
-Typically you unpack the DVD image on your Server. It has the kernel, initrd and other files
-required to boot the OS in installation mode.
-
-In the UI you give the distribution a "label" and the local path on the SUSE Manager Server where the
-installation files can be found.
-
-The third required parameter is the matching "Base Channel" mirrored on your SUSE Manager server
-representing the distribution you want to install. This can be the Vendor, Custom or Cloned Channels.
-
-Optionally you can specify kernel options which should be added when booting this distribution.
-(There are multiple places where kernel options can be provided. Only add options here which are
-generic for the distribution)
-
-=== A Profile:
-
-At System => Autoinstallation => Profiles you can add profiles for autoinstallations.
-It can be AutoYaST or Kickstart Profiles.
-
-You have two variants to create Profiles.
-
-1. Create a Kickstart Profile using a Wizard
-2. Import a Profile (Kickstart or AutoYaST)
-
-(For more information about the Kickstart Wizard link to Reference Guide?)
-
-==== Import a Profile
-
-You provide a lable for the profile and select a distribution which should be used for this profile.
-
-Virtualization type and again kernel options.
-
-Write or upload the kickstart or autoyast profile.
-
-AutoYaST is able to dump a profile from an existing installation. This can be used as base, but needs
-some adaptions to be usable from SUSE Manager:
-
-- Change the **add-on** section and add SUSE Manager URLs. These URLs must have a special format
-
-  http://$redhat_management_server/ks/dist/child/`channel-label`/`distribution-label`
-
-Replace **channel-label** and **distribution-label** with the correct labels.
-It would make sence to use a variable for `distribution-label`.
-Ensure that the distribution label corresponds to the Autoinstallable Distribution you have selected.
-You can only configure "child channels" here. These channels must be childs of the base channel
-you selected in the distribution you use for this profile.
-
-You do not need to specify a base channel. You defined the base channel in the distribution already.
-
-- Register the system after it is installed. For this we provide "snippets" which can be used.
-
-For salt managed clients the script `spacewalk/sle_register_salt` can be used:
-
-```
-  <scripts>
-    <init-scripts config:type="list">
-      $SNIPPET('spacewalk/sle_register_salt')
-    </init-scripts>
-  </scripts>
-```
-
-For traditional client registration `spacewalk/sles_register_script` could be used:
-
-```
-  <scripts>
-    <init-scripts config:type="list">
-      $SNIPPET('spacewalk/sles_register_script')
-    </init-scripts>
-  </scripts>
-```
-
-Note: when registering with salt, the salt key must be accepted on the SUSE Manager Server before
-the autoinstallation proceedure could be finished.
-
-==== Variables and snippets
-
-The profiles are rendered when a client request it. This provide the opportunity to use variables
-in the profile. In Profiles you can find a tab "Variables" where you can specify them.
-
-Typical variables are:
-
-redhat_management_server: the server where you register to (automatically set)
-org: the organization id where this profile is created. (automatically set)
-registration_key: this is used in the register snippets. When you specify it, you can set the activation key to be used to register the system.
-dont_register: if specified the registration will be skipped.
-allow_config_actions: if set to 1, it will allow traditional configuration management (traditional only)
-allow_remote_commands: if set to 1, it will allow traditional remote command execution (traditional only)
-dont_disable_automatic_onlineupdate: if set, the automatic online update stay enabled. (SUSE OSes only)
-dont_disable_local_repos: is set, local repositories will stay active (not recommended)
-
-To see available snippets, look at System => Autoinstallation => Autoinstallation Snippets .
-You can write own once
-
-
-== Starting an auto installation
+== Starting an Autoinstallation
 
 To start an autoinstallation the system must be known to SUSE Manager already.
 You can use Bare-metal Provisioning (https://opensource.suse.com/doc-susemanager/suse-manager/reference/admin/bare-metal-systems.html)
