--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -21,7 +21,6 @@ If you are on an internal network and do not have access to {scc}, you can set u
 For more information about configuring a proxy for access to {scc} during a {sle} installation, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-boot-parameters.html#sec-boot-parameters-advanced-proxy.
 
 
-.Naming Your Server
 [IMPORTANT]
 ====
 The hostname of {productname} must not contain uppercase letters as this may cause _jabberd_ to fail.
@@ -30,29 +29,8 @@ Although changing the server name is possible, it is a complex process and unsup
 ====
 
 
-In a production environment, {productname} server and its clients should always use a firewall.
-This table gives an overview of required ports, to be used when you are setting up your firewall rules.
+In a production environment, the {productname} Server and clients should always use a firewall.
+For a comprehensive list of the required ports, see xref:installation:ports.adoc[].
 
 
-[[tab.install.ports.server1]]
-.Required Server Ports
-[cols="1,1,1", options="header"]
-|===
-| Port | Protocol | Description
-| 22   | TCP      | SSH
-| 67   | UDP      | DHCP
-| 69   | UDP      | TFTP, used to support PXE services
-| 80   | TCP      | HTTP, used in some bootstrap cases
-| 123  | UDP      | NTP time service
-| 443  | TCP      | HTTPS, used for {webui}, client, Proxy server, and API traffic
-| 4505 | TCP      | Salt, used by the Salt-master to accept communication requests from clients
-| 4506 | TCP      | Salt, used by the Salt-master to accept communication requests from clients
-| 5222 | TCP      | XMPP client, used for communications with the [systemitem]``osad`` daemon on traditional client systems
-| 5269 | TCP      | XMPP server, used for pushing actions to {susemgrproxy}
-|===
-
-For more information on disconnected setup and port configuration, see:
-
-* xref:administration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[]
-
-* xref:installation:ports.adoc[]
+For more information on disconnected setup and port configuration, see xref:administration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[].
