--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -72,6 +72,13 @@ So if process A opens a TCP connection to process B (for example, port 22), then
 | 22          | Inbound   |          |Required when using ssh-push or ssh-push-tunnel contact methods.
 Check-in on clients connected to a {productname} Proxy will be initiated on the {productname} Server and "`hop through`" through to clients.
 | 80          | Outbound  |           | Used to reach {productname}.
+| 4505         | Inbound  | TCP | salt | Required by the Salt-master to accept communication requests via TCP from clients.
+The connection is initiated by the client and remains open to allow the master to send commands.
+This port uses a publish/subscribe topology; the client subscribes to notifications from the master.
+| 4506        | Inbound  | TCP | salt | Required by the Salt-master to accept communication requests via TCP from clients.
+The connection is initiated by the client and is open only when needed.
+Usually, clients will open this port when they have to report results to the master, such as when a command received on port 4505 has finished.
+This port uses a request/response topology; the client sends requests to the master.
 | 5222        | Inbound   | TCP       | For push actions and connections issued by [systemitem]``osad`` running on the client systems.
 | 5269        | Inbound/Outbound | TCP | For push actions with the server.
 |===
