--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -11,29 +11,30 @@ All formulas must be accurately configured for your {smr} installation to functi
 If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration.
 You can then manually edit the formulas as required.
 
-== {smr} Branch Server Formulas
+== Branch Server Formulas
 
-Branch servers are configured using formulas. Formulas can be configured using {susemgr} {webui}, and {susemgr} XMLRPC API.
-To fully configure {smr} environment, following formulas need to be enabled and configured for branch server:
+Branch servers are configured using formulas. 
+Formulas can be configured using {susemgr} {webui}, or the {susemgr} XMLRPC API.
+To fully configure {smr}, these formulas need to be enabled and configured on the branch server:
 
-* Branch Network Formula, see xref:salt:formula-branchnetwork.adoc[]
-* Bind Formula, see xref:salt:formula-bind.adoc[]
-* Dhcpd Formula, see xref:salt:formula-dhcpd.adoc[]
-* PXE Formula, see xref:salt:formula-pxe.adoc[]
-* TFTP Formula, see xref:salt:formula-tftpd.adoc[]
-* Vsftp Formula, see xref:salt:formula-vsftpd.adoc[]
+* Branch network formula, see xref:salt:formula-branchnetwork.adoc[]
+* Bind formula, see xref:salt:formula-bind.adoc[]
+* DHCPD formula, see xref:salt:formula-dhcpd.adoc[]
+* PXE formula, see xref:salt:formula-pxe.adoc[]
+* TFTP formula, see xref:salt:formula-tftpd.adoc[]
+* VSFTP formula, see xref:salt:formula-vsftpd.adoc[]
 
-Optionally, [systemitem]``Image Synchronization Formula`` can also be enabled and configured.
+Optionally, you can also enable the image synchronization formula.
 For more information, see xref:salt:formula-imagesync.adoc[].
 
 [IMPORTANT]
 ====
 It is very easy to misconfigure formulas that may result in branch not working properly.
 Due to the generic nature of formulas it is difficult to do overall validation.
-When in doubt, configure branch server by {smr} provided command line utilities and then fine tune individual formulas, see xref:retail:retail-install-setup.adoc[].
+We recommend that you configure the branch server using the {smr} command line utilities, and use individual formula settings for further tuning if required.
+For more information, see xref:retail:retail-install-setup.adoc[].
 ====
 
-.State and Formula Name Collisions
 [WARNING]
 ====
 If a formula uses the same name as an existing Salt state, the two names will collide, and could result in the formula being used instead of the state.
