--- a/modules/client-configuration/pages/vhm-caasp.adoc
+++ b/modules/client-configuration/pages/vhm-caasp.adoc
@@ -11,7 +11,7 @@ For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 == Register CaaSP nodes
 
 You can register each {caasp} node to {productname} using the same method as you would a Salt client.
-For more information, see xref:client-configuration:registration-overview.adoc[]
+For more information, see xref:client-configuration:registration-overview.adoc[].
 
 We recommend that you create an activation key to associate {caasp} channels, and to onboard the associated nodes.
 For more on activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[]
