--- a/modules/client-configuration/pages/vhm-caasp.adoc
+++ b/modules/client-configuration/pages/vhm-caasp.adoc
@@ -22,7 +22,7 @@ For more on bootstrapping, see xref:client-configuration:registration-bootstrap.
 
 When you have added the {caasp} nodes to {productname}, you will be able to:
 
-* View the patch level status of each node
+* View the patch level status of each node.
 * Perform configuration management operations against the nodes, including using Salt states.
 * Assign different set of channels to clusters using channel staging and lifecycle management filters.
 
