--- a/modules/client-configuration/pages/vhm-caasp.adoc
+++ b/modules/client-configuration/pages/vhm-caasp.adoc
@@ -8,7 +8,7 @@ For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
 
-== Register CaaSP nodes
+== Register CaaSP Nodes
 
 You can register each {caasp} node to {productname} using the same method as you would a Salt client.
 For more information, see xref:client-configuration:registration-overview.adoc[].
@@ -36,7 +36,7 @@ Waiting on clarification of this. LKB 2019-11-11
 ====
 Do not use {productname} to perform these actions on any {caasp} nodes:
 
-* Install, upgrade, or removal of ``kubernetes-kubeadm``, ``kubernetes-kubelet``, ``kubernetes-client``, ``cri-o``, or ``cni-plugins``.
+* Install, upgrade, or removal of ``kubernetes-kubeadm``, ``kubernetes-kubelet``, ``kubernetes-client``, ``cri-o``, or ``cni-plugins``
 * Scheduling and executing a node reboot
 
 These actions are not supported.
