updated link + skuba

--- a/modules/client-configuration/pages/vhm-caasp.adoc
+++ b/modules/client-configuration/pages/vhm-caasp.adoc
@@ -26,9 +26,8 @@ When you have added the {caasp} nodes to {productname}, you will be able to:
 * Perform configuration management operations against the nodes, including using Salt states.
 * Assign different set of channels to clusters using channel staging and lifecycle management filters.
 
-Additionally, updates related to {k8s} are automatically installed, because of a self-updating daemon running on the {caasp} nodes.
-// Is this referring to skuba? LKB 2019-11-11
-For more information, see the {caasp} documentation.
+Updates related to {k8s} are managed using the ``skuba`` tool.
+For more information, see https://documentation.suse.com/suse-caasp/4/html/caasp-admin/_cluster_updates.html.
 
 ////
 Waiting on clarification of this. LKB 2019-11-11
