--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -28,7 +28,7 @@ The icons in this table indicate:
 | Operating system packages  |  icon:times[role="danger"] (plain CentOS) / icon:check[role="green"] (with {es}) | icon:times[role="danger"] (plain CentOS)/icon:check[role="green"] (with {es}) | icon:times[role="danger"] (plain CentOS)/``Salt`` (with {es})
 | Registration | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Install packages | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
-| Apply patches | icon:check[role="green"] (third-party service required for errata) | icon:check[role="green"] (third-party service required for errata) | ``Salt`` (third-party service required for errata)
+| Apply patches (requires CVE ID) | icon:check[role="green"] (third-party service required for errata) | icon:check[role="green"] (third-party service required for errata) | ``Salt`` (third-party service required for errata)
 | Remote commands | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | System package states | ``Salt`` | ``Salt`` | ``Salt``
 | System custom states | ``Salt`` | ``Salt`` | ``Salt``
@@ -40,7 +40,7 @@ The icons in this table indicate:
 | Advanced Virtual Guest Management icon:asterisk[role="none"] | icon:times[role="danger"] | ``Salt`` | ``Salt``
 | Virtual Guest Installation (Kickstart), as Host OS | ``Traditional`` | ``Traditional`` | icon:times[role="danger"]
 | Virtual Guest Installation (image template), as Host OS | ``Traditional`` | icon:check[role="green"] | ``Salt``
-| System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"] | ``Salt``
+| System redeployment ({kickstart}) | ``Traditional`` | icon:check[role="green"] | ``Salt``
 | Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. +
 ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
 | Works with {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
@@ -48,7 +48,7 @@ The icons in this table indicate:
 | Software crash reporting | icon:times[role="danger"] | ``Traditional`` | icon:times[role="danger"]
 | Staging (pre-download of packages) | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Duplicate package reporting | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
-| CVE auditing |  icon:check[role="green"] | icon:check[role="green"] | ``Salt``
+| CVE auditing (requires CVE ID) |  icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | SCAP auditing | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Package verification | ``Traditional`` | ``Traditional`` | icon:times[role="danger"]
 | Package locking | ``Traditional`` | ``Traditional`` | icon:times[role="danger"]
