--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -9,11 +9,11 @@ That includes servers, proxies, and build hosts.
 // It's similar to zypper at the package level:
 If you do not keep the {productname} Server updated, you might not be able to update some parts of your environment when you need to.
 
+This section contains a checklist for your maintenance window, with links to further information on performing each of the steps.
+
 
 
 == Server
-
-This section contains a checklist for your maintenance window, with links to further information on performing each of the steps.
 
 // ke, 2019-09-30: we'll stop spacewalk during the update
 // . Stop spacewalk services.
@@ -105,7 +105,7 @@ endif::[]
 
 
 
-=== Refreshing Client Tools After Server Update
+=== Client Tools
 
 When the server is updated consider to update some tools on the clients, too.
 Updating [package]``salt-minion``, [package]``zypper``, and other related management package on clients is not a strict requirement, but it is a best practice in general.
@@ -118,14 +118,27 @@ To avoid this always update the salt-minion package when available.
 
 == Inter-Server Synchronization Slave Server
 
-Inter-server synchronization slave servers should be updated as soon as
-the update of the main server (master server) is completed.
+If you are using an inter-server synchronization slave server,  update it after the {productname} Server update is complete.
+
+For more in inter-server synchronization, see xref:administration:iss.adoc[].
+
+
+
+== Monitoring Server
+
+If you are using a monitoring server for Prometheus, update it after the {productname} Server update is complete.
+
+For more information on monitoring, see xref:administration:monitoring.adoc[].
 
 
 
 == Proxy
 
-Proxies should be updated as soon as Server updates are complete.
-In general, running a Proxy connected to a Server on a different version is not supported. The only exception is for the duration of updates where it is expected that the Server is updated first, so the Proxy could run the previous version temporarily.
-Especially in a version 3.2 to 4.0 migration you should upgrade the server first, then any proxy.
+Proxies should be updated as soon as {productname} Server updates are complete.
+
+In general, running a proxy connected to a server on a different version is not supported.
+The only exception is for the duration of updates where it is expected that the server is updated first, so the proxy could run the previous version temporarily.
+
+Especially if you are migrating from version 3.2 to 4.0, upgrade the server first, then any proxy.
+
 For more information, see xref:upgrade:proxy-update.adoc[] and xref:upgrade:proxy-migration.adoc[].
