--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -15,7 +15,12 @@ ifeval::[{suma-content} == true]
 *** xref:install-server-unified.adoc[Install Server]
 *** xref:install-proxy-unified.adoc[Install Proxy]
 endif::[]
+ifeval::[{suma-content} == true]
 *** xref:install-vm.adoc[Install Server in a Virtual Machine with JeOS]
+endif::[]
+ifeval::[{uyuni-content} == true]
+*** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
+endif::[]
 // better disabling for now; needs a complete overhaul
 // 2019-06-04, ke :
 // *** xref:install-server.adoc[Install Server from Packages]
@@ -80,10 +85,15 @@ include::modules/installation/pages/install-proxy-unified.adoc[leveloffset=+2]
 endif::[]
 
 // Install the VM
+ifeval::[{suma-content} == true]
 include::modules/installation/pages/install-vm.adoc[leveloffset=+2]
+endif::[]
+ifeval::[{uyuni-content} == true]
+include::modules/installation/pages/install-uyuni.adoc[leveloffset=+2]
+endif::[]
 
 // Install the Server
-include::modules/installation/pages/install-server.adoc[leveloffset=+2]
+// include::modules/installation/pages/install-server.adoc[leveloffset=+2]
 
 // Install Proxy
 //include::modules/installation/pages/install-proxy.adoc[leveloffset=+2]
