there is only 1 gpg key and we have a default name which can be used.

--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -84,8 +84,7 @@ This means that all clients connected to the server will need to trust the new  
 . For RPM-based client systems, use these remote commands:
 +
 ----
-rpm --import http://server.example.com/pub/keyname.key
-rpm --import http://server.example.com/pub/company.key
+rpm --import http://server.example.com/pub/mgr-gpg-pub.key
 ----
 . For Ubuntu clients, you will need to reassign the channels, which will automatically pick up the new GPG key.
 You can do this through the {productname} {webui}, or from the command line on the server with this command:
